# training_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: app.h  basicdatatypes.h  bitarray.h  boxit.h  conditionalstatements.h  dequestl.h  environment.h  forloop.h  helloworld.h  inputandoutput.h  lowerboundstl.h  magicspells.h  printpretty.h  stringstream.h  variablesizedarrays.h
src/: app.cpp  basicdatatypes.cpp  bitarray.cpp  boxit.cpp  conditionalstatements.cpp  dequestl.cpp  environment.cpp  forloop.cpp  helloworld.cpp  inputandoutput.cpp  lowerboundstl.cpp  magicspells.cpp  printpretty.cpp  stringstream.cpp  variablesizedarrays.cpp
